# Manipulator-on-Dynamixel-

./: README.md  blogg.md  ledblinktask.c
Assem1.SLDASM/: gazebo.launch
Assem1.SLDASM/launch/: display.launch  gazebo.launch
Blog/: 2023-09-10-Manipulator-on-dynamixel.md  Blog.md
Firmware/: 1_dynamixel.c  Led.c  ledlbink.c
Firmware/0_led_blink/: led_blink.c
Firmware/1_dynamixel_control/: dynamixel_control.c
Notes/: Basics.md  Linear Algebra Part1.md  UART.md
ROS_Practice Folder/: CMakeLists.txt  package.xml
ROS_Practice Folder/0_publishersubscriber_cpp/: CMakeLists.txt
ROS_Practice Folder/1_pubsub/: package.xml  setup.py
ROS_Practice Folder/1_pubsub/scripts/: publisher_memberfunction.py  publisher_memberfunction2.py  subscriber_memberfunction.py
ROS_Practice Folder/1_py_pubsub/: package.xml  setup.py
ROS_Practice Folder/1_py_pubsub/scripts/: publisher_memberfunction.py  publisher_memberfunction2.py
ROS_Practice Folder/scripts/: publisher_member_function.cpp  subscriber_member_function.cpp
URDF/: CMakeLists.txt  package.xml
URDF/launch/: display.launch  gazebo.launch
URDF/meshes/: link_1.STL  link_2.STL  link_3.STL
URDF/urdf/: Assem1.SLDASM.csv  Assem1.SLDASM.urdf
src/dynamixel_sdk_inf/: CMakeLists.txt  package.xml
src/dynamixel_sdk_inf/msg/: InverseKinematics.msg  SetPosition.msg  SetTorque.msg
src/dynamixel_sdk_inf/srv/: SetId.srv  SetMode.srv
src/motor_setup/: CMakeLists.txt  package.xml
src/motor_setup/config/: params.yaml
src/motor_setup/include/motor_setup/: init_component.hpp  pos_torque_control.hpp  position_control.hpp
src/motor_setup/launch/: init_component.launch.py
src/motor_setup/scripts/: inverse_kinematics.py
src/motor_setup/src/: init_component.cpp  pos_torque_control.cpp  position_control.cpp  position_pub.cpp
